--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "umi": "^2.9.4",
     "umi-plugin-react": "^1.10.0"
+  },
+  "dependencies": {
+    "antd": "^3.23.3"
   }
 }
